compiler/driver/tests/snapshots/fixtures__m1-hello__errors__duplicate-function.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m1-hello/errors/duplicate-function.scoop:5:5: error: duplicate function `main`
