compiler/driver/tests/snapshots/fixtures__m1-hello__errors__no-main.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m1-hello/errors/no-main.scoop:1:1: error: missing entry point: declare `fun main()`
