compiler/driver/tests/snapshots/fixtures__m1-hello__errors__print-arity.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m1-hello/errors/print-arity.scoop:2:5: error: `print` takes exactly 1 argument, but 2 were supplied
